# cpp-ray-tracer

./: .gitignore  CMakeLists.txt  README.md  out.ppm
src/v1/: main  main.cpp  out-balls.ppm  out-color.ppm
src/v1/camera/: camera.h
src/v1/geometry/: hittable.h
src/v1/img/: common.h  ppm.h
src/v1/infra/: common.h  export.h  interval.h  ray.h  vec3.h
src/v1/main.dSYM/Contents/Resources/DWARF/: main
src/v1/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/v1/material/: common.h  dielectric.h  lambertian.h
src/v2/: main  main.cpp
src/v2/camera/: camera.h
src/v2/geometry/: aabb.h  bvh.h  export.h  hittable.h  instance.h  primitive.h  sphere.h
src/v2/img/: common.h  ppm.h
src/v2/infra/: common.h  interval.h  perlin.h  vec3.h
src/v2/main.dSYM/Contents/Resources/DWARF/: main
src/v2/material/: common.h  dielectric.h  export.h  isotropic.h  lambertian.h  light.h  metal.h
src/v2/mixture/: volume.h
src/v2/scene/: balls.h  cornell.h  final.h  tex.h  volume.h
src/v2/texture/: noise.h  texture.h
src/v3/: main  main.cpp
src/v3/camera/: camera.h
src/v3/geometry/: aabb.h  bvh.h  hittable.h  primitive.h  sphere.h
src/v3/img/: common.h  loader.h
src/v3/infra/: common.h  export.h  interval.h  onb.h  pdf.h  ray.h  vec3.h
src/v3/main.dSYM/Contents/Resources/DWARF/: main
src/v3/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/v3/material/: common.h  dielectric.h  export.h  isotropic.h  lambertian.h  light.h  metal.h
src/v3/mixture/: record.h  volume.h
src/v3/scene/: balls.h  cornell-exotic.h  cornell.h  final.h  tex.h  volume.h
src/v3/texture/: img.h  texture.h
